manifests/centurion/base/Deployment-worker.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: Worker
    app.kubernetes.io/name: centurion
  name: worker
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: Worker
      app.kubernetes.io/name: centurion
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app.kubernetes.io/component: Worker
        app.kubernetes.io/name: centurion
    spec:
      terminationGracePeriodSeconds: 10
      affinity: {}
      containers:
        - name: worker
          image: nofusscomputing/centurion-erp:dev
          command:
            - celery
            - -A
            - app
            - worker
            - -l
            - INFO
          resources:
            limits:
              cpu: 800m
              memory: 200Mi
            requests:
              cpu: 10m
              memory: 20Mi

          ports:
            - containerPort: 8080
              name: metrics

          volumeMounts:

            - name: celery-broker
              mountPath: /etc/itsm/celery-broker.py
              subPath: celery-broker.py
              readOnly: true

            - name: configuration
              mountPath: /etc/itsm/settings.py
              subPath: settings.py
              readOnly: true

            - name: database
              mountPath: /etc/itsm/database.py
              subPath: database.py
              readOnly: true

            - mountPath: /tmp
              name: tmp
              subPath: tmp

      tolerations: []
      volumes:

        - name: celery-broker
          secret:
            secretName: celery-broker
            items:
              - key: celery-broker.py
                path: celery-broker.py

        - name: configuration
          configMap:
            name: configuration
            items:
              - key: settings.py
                path: settings.py

        - name: database
          secret:
            secretName: database
            items:
              - key: database.py
                path: database.py

        - name: tmp
          emptyDir:
            medium: Memory
            # sizeLimit: 64Mi
