manifests/centurion/base/Service-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app.kubernetes.io/component: API
    app.kubernetes.io/name: centurion
spec:
  selector:
    app.kubernetes.io/component: API
    app.kubernetes.io/name: centurion
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 8080
      targetPort: metrics
